# flex-store.rs

./: .gitignore  Cargo.toml  README.md  btree.rs  data.hex  rust-toolchain.toml  rustfmt.toml
.github/workflows/: ci.yml  rust.yml
banchmarks/btree/: Cargo.toml
banchmarks/btree/src/: main.rs
book/: print.html
book/file_formats/: data.html  represent_tree.html
book/indexing/: b_plus_tree.html  index.html
book/introduction/disk_base/: hhd.html  index.html  ssd.html
byte-seeker/: Cargo.toml
byte-seeker/src/: endian.rs  lib.rs  reader.rs  writer.rs
bytes/: Cargo.toml
bytes/src/: endian.rs  lib.rs
data-view/: Cargo.toml  README.md
data-view/src/: dataview.rs  endian.rs  lib.rs  view.rs
docs/: book.toml
docs/book/: 404.html  index.html  print.html  searchindex.json
docs/book/file_formats/: data.html  index.html  record.html  represent_tree.html  slotted_pages.html
docs/book/indexing/: b_plus_tree.html  index.html
docs/book/introduction/: in_memory.html  index.html
docs/book/page/: index.html
docs/public/: 404.html  index.html  print.html  searchindex.js
docs/src/: SUMMARY.md
docs/theme/: head.hbs
flex-bplus-tree/: Cargo.toml
flex-bplus-tree/src/: branch.rs  entry.rs  leaf.rs  lib.rs  node.rs  util.rs
flex-bptree/: Cargo.toml
flex-bptree/src/: branch.rs  entry.rs  leaf.rs  lib.rs  node.rs
flex-btree/: Cargo.toml  tree.txt
flex-btree/src/: branch.rs  cursor.rs  entry.rs  leaf.rs  lib.rs  meta.rs  node.rs  utill.rs  view.rs
flex-btree/tests/: basic.rs
flex-linear-hash/: Cargo.toml
flex-linear-hash/src/: bucket_index.rs  lib.rs
flex-page/: Cargo.toml
flex-page-manager/: Cargo.toml  test.hex
flex-page-manager/src/: lib.rs
flex-page/data-view/: Cargo.toml
flex-page/src/: PageNo.rs  file.rs  free.rs  lib.rs  locker.rs  meta.rs  page.rs  page_no.rs  size_info.rs
flex-page/tests/: basic.rs
flex-page2/: Cargo.toml
flex-page2/src/: lib.rs  meta.rs  page_no.rs
flex-range-idx/: Cargo.toml
flex-range-idx/src/: buffer.rs  entry.rs  leaf.rs  lib.rs  root.rs
flex-tools/: Cargo.toml
flex-tools/src/: main.rs
flex-trie/: Cargo.toml
flex-trie/src/: lib.rs
flex-value/: Cargo.toml
flex-value/examples/: array.rs
flex-value/src/: array.rs  lib.rs  map.rs  object.rs  prelude.rs  utils.rs  value.rs
page/: Cargo.toml  README.md
page-lock/: Cargo.toml  README.md
page-lock/src/: lib.rs
page/src/: lib.rs
page/tests/: basic.rs
src/: branch.rs  btree.rs  lib.rs  page.rs
utils/src/: cursor.rs  endian.rs  lib.rs
(+28 files in other folders)
