[package]
name = "data-view"
version = "0.2.0"
edition = "2021"

description = "A library for viewing data in a table format."
authors = ["Nur <nurmohammed840@gmail.com>"]
repository = "https://github.com/nurmohammed840/flex"
license = "GPL-3.0"
keywords = ["lock", "async"]

[features]
BE = []
NE = []

[dependencies]
