[package]
name = "flex-page"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "*", default-features = false, features = ["rt"] }
stack-array = { git = "https://github.com/nurmohammed840/stack-collections" }
utils = { path = "../utils" }

[dev-dependencies]
tokio = { version = "1.14.0", features = ["macros", "time"] }